--- a/style.css
+++ b/style.css
@@ -61,6 +61,14 @@ img {
  color:whitesmoke;
 }
 
+p{
+ color: whitesmoke;
+}
+
+.link-github{
+ color:whitesmoke;
+}
+
 
 @media screen and (min-width: 768px) {
  .movie-card {
